<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_home_selector"
        android:title="@string/home"/>
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_fav_selector"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/alertsFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_alert_selector"
        android:title="@string/alerts"/>

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_settings_selector"
        android:title="@string/settings"/>

</menu>